Generating an executable jar